--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,8 +1,9 @@
 name: Deploy to Amazon EC2
 
 on:
-  pull_request:
-    branches: [ "main" ]
+  push:
+    branches:
+      - main
   
 
 # 본인이 설정한 값을 여기서 채워넣습니다.
